# CopilotKit

./: .browserslistrc  .coderabbit.yaml  .dockerignore  .eslintrc.js  .gitattributes  .gitignore  .kodiak.toml  .mcp.json  .npmrc  .oxfmtrc.json  .oxlintrc.json  .pnpmfile.cjs  .prettierignore  .sentinel-ci.yml  1.Overview.md  2.Architecture.md  AGENTS.md  CHANNELS-CONTRACT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTRL + K Does Not Work on Windows  Content Contribution Guidelines for CopilotKit  HWP_Merge_Dev_Guide.md  HWP_Merge_Module.bas  HWP_Merge_사용방법.md  LICENSE  MUSIC TRANSLATE AI  OPS_TO_HARNESS_AUDIT.md  README.md  REALTIME_PLAN.md  Roadmap.md  SECURITY.md  Sum of GP.py  TODO-REFACTOR-COPILOT-ACTION.md  WIP.md  co.go  comments.unit_test.ts  commitlint.config.js  dangerfile.js  (+25 more)
e2e/example-apps/qa-native/agent-py/: .gitignore  pyproject.toml
e2e/example-apps/qa-text/agent-py/: pyproject.toml
e2e/example-apps/qa/agent-py/: pyproject.toml
e2e/example-apps/routing/agent-py/: pyproject.toml
e2e/example-apps/shared-state/agent-py/: pyproject.toml
examples/agui-canvas-app/agent/: agent.py  langgraph_agent.py  main.py  pyproject.toml  researchState.py  research_langgraph.py
examples/agui-canvas-app/agent/crewai_implementation/: agui_crew.py  crewai_agent.py
examples/canvas/copilotkit-manufact/agent/: .env.example  langgraph.json  main.py  pyproject.toml
examples/coagents-ai-researcher/agent/: .dockerignore  Dockerfile  pyproject.toml
examples/coagents-ai-researcher/agent/ai_researcher/: demo.py  extract.py  model.py  search.py  state.py  steps.py  (+1 more)
examples/coagents-qa-native/agent/: Dockerfile  pyproject.toml
examples/coagents-qa-text/agent/: Dockerfile  langgraph.json  pyproject.toml
examples/coagents-qa/agent/: langgraph.json  pyproject.toml  requirements.txt
examples/coagents-research-canvas/agent/: .dockerignore  Dockerfile  langgraph.json  pyproject.toml
examples/coagents-routing/agent/: README.md  langgraph.json  pyproject.toml
examples/coagents-starter-crewai-crews/agent-py/: README.md  pyproject.toml  requirements.txt
examples/coagents-starter/agent/: langgraph.json  pyproject.toml
examples/coagents-starter/agent-py/: .env.example  README.md  pyproject.toml  requirements.txt  simple_agent.py
examples/coagents-streaming/agent/: pyproject.toml
examples/coagents-travel/agent/: .gitignore  README.md  pyproject.toml
examples/crewai-multi-agent/agent/: memes.json  pyproject.toml
examples/crewai/agent/: pyproject.toml
examples/demo-viewer/agent/: langgraph.json  pyproject.toml
examples/feature-viewer-langraph/agent/: langgraph.json  pyproject.toml
examples/integrations/a2a-a2ui/: .env.example  .gitignore  README.md  eslint.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  tsconfig.json
examples/langgraph-tutorial-customer-support/agent-py/: pyproject.toml
examples/langgraph-tutorial-quickstart/agent-py/: pyproject.toml
examples/saas-dynamic-dashboards/agent/: agent.py  pyproject.toml
sdk-python/: .gitignore  README.md  langgraph.json  pyproject.toml
sdk-python-adk/: README.md  project.json  pyproject.toml
sdk-python-adk/examples/: agent.py
sdk-python-adk/src/copilotkit_intelligence_adk/: __init__.py  _snapshot.py  registry.py  toolset.py
sdk-python-adk/tests/: conftest.py  test_conformance.py  test_package.py  test_public_api.py  test_registry.py  test_toolset.py
sdk-python-adk/tests/api_contract/: test_google_adk_contract.py
sdk-python-agent-framework/: .gitignore  README.md  project.json  pyproject.toml
sdk-python-agent-framework/examples/: agent.py
sdk-python-agent-framework/src/copilotkit_intelligence_agent_framework/: __init__.py  _registry_state.py  context_provider.py
sdk-python-agent-framework/tests/: conftest.py  test_conformance.py  test_context_provider.py  test_package.py  test_public_api.py
sdk-python-agent-framework/tests/api_contract/: test_agent_framework_contract.py
sdk-python-langgraph/: README.md  project.json  pyproject.toml
sdk-python-langgraph/examples/: agent.py
sdk-python-langgraph/src/copilotkit_intelligence_langgraph/: __init__.py  _registry_state.py  middleware.py
sdk-python-langgraph/tests/: conftest.py  test_conformance.py  test_middleware.py  test_package.py  test_public_api.py  test_registry.py
sdk-python-langgraph/tests/api_contract/: test_langgraph_contract.py
sdk-python/copilotkit/: __init__.py  a2ui.py  a2ui_json_schema.json  action.py  agent.py  copilotkit_lg_middleware.py  crewai.py  crewai_agent.py  demo.py  exc.py  header_propagation.py  html.py  intelligence.py  langchain.py  langgraph.py  langgraph_agent.py  langgraph_agui_agent.py  langgraph_cloud_agent.py  logging.py  mastra_message_history.py  parameter.py  protocol.py  runloop.py  sdk.py  state.py  types.py  utils.py
sdk-python/copilotkit/crewai/: __init__.py  copilotkit_integration.py  copilotkit_predict_state.py  copilotkit_stream_completion.py  crewai_agent.py  crewai_event_listener.py  crewai_sdk.py  emit_copilotkit_predict_state.py  imports.py  utils.py
sdk-python/copilotkit/integrations/: fastapi.py
sdk-python/copilotkit/llamaindex/: llamaindex_agent.py  llamaindex_sdk.py
sdk-python/tests/: conftest.py  test_agui_agent.py  test_agui_context_serializable.py  test_context_integration.py  test_context_persistence.py  test_copilotkit_context_propagation.py  test_copilotkit_lg_middleware.py  test_crewai_flow_messages_to_copilotkit.py  test_crewai_import_compat.py  test_emit_filtering.py  test_emit_state_merge.py  test_emit_tool_call_optional_id.py  test_emit_tool_calls.py  test_graphql_thread_behavior.py  test_header_propagation.py  test_intelligence.py  test_intercepted_tool_call_events.py  test_interrupt_resume.py  test_langchain_message_content.py  test_langchain_messages_to_copilotkit.py  test_langgraph_interrupt.py  test_prepare_stream_context_integration.py  test_pydantic_state_serialization.py  test_raw_event_sanitization.py  test_runtime_info.py  test_sanitize_for_json.py  test_tool_call_event_ordering.py
(+20830 files in other folders)
