[tool.poetry]
name = "copilotkit"
version = "0.1.75-alpha.4"
description = "CopilotKit python SDK"
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://copilotkit.ai"
repository = "https://github.com/CopilotKit/CopilotKit/tree/main/sdk-python"
keywords = ["copilot", "copilotkit", "langgraph", "langchain", "ai", "langsmith", "langserve"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langgraph = {version = ">=0.3.25,<1.1.0"}
langchain = {version = ">=0.3.0"}
crewai = { version = "0.118.0", optional = true }
ag-ui-langgraph = { version = ">=0.0.22", extras = ["fastapi"] }
fastapi = "^0.115.0"
partialjson = "^0.0.8"
toml = "^0.10.2"

[tool.poetry.extras]
crewai = ["crewai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
