[tool.poetry]
name = "copilotkit"
version = "0.1.87"
description = "CopilotKit python SDK"
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://copilotkit.ai"
repository = "https://github.com/CopilotKit/CopilotKit/tree/main/sdk-python"
keywords = [
  "copilot",
  "copilotkit",
  "langgraph",
  "langchain",
  "ai",
  "langsmith",
  "langserve",
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
packages = [{ include = "copilotkit" }]
include = ["copilotkit/*.json", "copilotkit/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
langgraph = { version = ">=0.3.25,<2" }
langchain = { version = ">=0.3.0" }
crewai = { version = "0.118.0", optional = true, python = ">=3.10,<3.13" }
ag-ui-langgraph = { version = ">=0.0.29", extras = ["fastapi"] }
ag-ui-protocol = ">=0.1.15"
fastapi = ">=0.115.0,<1.0.0"
partialjson = "^0.0.8"
toml = "^0.10.2"

[tool.poetry.extras]
crewai = ["crewai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pytest (>=9.0.2,<10.0.0)"]
