[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "orca-copilotkiti",email = "testapp@copilotkit.ai"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "copilotkit (>=0.1.46,<0.2.0)",
    "ag-ui-protocol (>=0.1.5,<0.2.0)",
    "langgraph (>=0.4.7,<0.5.0)",
    "langchain-core (>=0.3.61,<0.4.0)",
    "openai (>=1.82.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "litellm (>=1.71.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
