[tool.poetry]
name = "email_agent"
version = "0.1.0"
description = "Starter"
authors = ["Ariel Weinberger <weinberger.ariel@gmail.com>"]
license = "MIT"

[project]
name = "email_agent"
version = "0.0.1"
dependencies = [
  "langgraph==0.2.52",
  "langchain_core",
  "langchain_openai",
  "langchain-google-genai",
  "langchain",
  "openai",
  "langchain-community",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "0.2.3"
langchain-anthropic = "0.2.3"
langchain-google-genai = "2.0.0"
langchain = "0.3.4"
openai = "^1.52.1"
langchain-community = "^0.3.1"
copilotkit = "0.1.34"
uvicorn = "^0.31.0"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.25"
langgraph-cli = {extras = ["inmem"], version = "^0.1.64"}

[tool.poetry.scripts]
demo = "email_agent.demo:main"
