[tool.poetry]
name = "email_agent"
version = "0.1.0"
description = "Starter"
authors = ["Ariel Weinberger <weinberger.ariel@gmail.com>"]
license = "MIT"

[project]
name = "email_agent"
version = "0.0.1"
dependencies = [
  "langgraph",
  "langchain_core",
  "langchain_openai",
  "langchain-google-genai",
  "langchain",
  "openai",
  "langchain-community",
  "copilotkit[crewai]>=0.1.52a5",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-openai = "0.2.3"
langchain-anthropic = "0.2.3"
langchain-google-genai = "2.1.6"
langchain = "0.3.26"
openai = "^1.52.1"
langchain-community = "^0.3.1"
copilotkit = "0.1.52a5"
crewai = "0.118.0"
langgraph = ">=0.2.50"
uvicorn = "^0.31.0"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.66"
langgraph-cli = {extras = ["inmem"], version = ">=0.3.3"}

[tool.poetry.scripts]
demo = "email_agent.demo:main"
