[tool.poetry]
name = "greeting_agent"
version = "0.1.0"
description = "Starter"
authors = ["Ariel Weinberger <weinberger.ariel@gmail.com>"]
license = "MIT"

[project]
name = "greeting_agent"
version = "0.0.1"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain-openai = "0.3.4"
langchain = "0.3.26"
openai = "^1.61.1"
langchain-community = "^0.3.1"
copilotkit = "0.1.52"
uvicorn = "^0.31.0"
python-dotenv = "^1.0.1"
langchain-anthropic = "0.2.3"
langchain-google-genai = "2.1.6"
langchain-core = "^0.3.66"
langgraph-cli = {extras = ["inmem"], version = "^0.3.3"}
crewai = { version = "0.102.0" }

[tool.poetry.scripts]
demo = "greeting_agent.demo:main"
