[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["CopilotKit"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
copilotkit = "0.1.49"
langchain = "0.3.21"
langgraph = "0.3.18"
langsmith = "0.3.18"
openai = "^1.68.2"
fastapi = "^0.115.5"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
demo = "email_agent.demo:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
