[tool.poetry]
name = "my_agent"
version = "0.1.0"
description = "Starter"
authors = ["Ariel Weinberger <weinberger.ariel@gmail.com>"]
license = "MIT"

[project]
name = "greeter"
version = "0.0.1"
dependencies = [
  "langgraph",
  "langchain_core",
  "langchain_openai",
  "langchain",
  "openai",
  "langchain-community",
  "copilotkit",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.14"
langchain-core = "^0.2.36"
langchain-openai = "^0.1.23"
langchain = "^0.2.15"
openai = "^1.43.0"
langchain-community = "^0.2.14"
copilotkit = "0.1.19"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
demo = "my_agent.demo:main"
