[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
copilotkit = "0.1.43"
tavily-python = "^0.5.1"
uvicorn = "^0.34.0"
dotenv = "^0.9.9"
crewai = "^0.102.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "demo.server:main"
