[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["CopilotKit"]
readme = "README.md"
packages = [{include = "demo"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
copilotkit = "0.1.49"
langchain = "0.3.21"
langgraph = "0.4.8"
langsmith = "0.3.18"
openai = "^1.68.2"
fastapi = "^0.115.5"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
langgraph_server = "demo.langgraph_server:main"
crew_server = "demo.crew_server:main"
