[tool.poetry]
name = "tutorial_customer_support"
version = "0.1.0"
description = "Customer Support Tutorial"
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
license = "MIT"

[project]
name = "tutorial_customer_support"
version = "0.0.1"
dependencies = [
  "langgraph==0.2.52",
  "langchain_core",
  "langchain-google-genai",
  "langchain",
  "openai",
  "langchain-community",
  "langchain-anthropic",
  "tavily-python",
  "copilotkit==0.1.28a6",
  "python-dotenv",
  "uvicorn",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.12"
copilotkit = "0.1.39"
langgraph = "0.2.52"
langchain-core = "^0.3.12"
langchain-community = "^0.3.1"
langchain-anthropic = "0.2.3"
langchain = "0.3.4"
openai = "^1.52.1"
tavily-python = "^0.5.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.31.0"
pandas = "^2.2.3"

[tool.poetry.scripts]
demo = "tutorial_customer_support.demo:main"
seed = "tutorial_customer_support.seed:main"