[project]
name = "agent"
version = "0.1.0"
description = ""
authors = ["Orca Copilotkit <testapp@copilotkit.ai>"]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "copilotkit (>=0.1.46,<0.2.0)",
    "langchain-core (>=0.3.60,<0.4.0)",
    "langgraph (>=0.4.5,<0.5.0)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "agent:main"
