[project]
name = "email_agent"
version = "0.1.0"
description = "Starter"
authors = [
    {name = "Ariel Weinberger", email = "weinberger.ariel@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "langgraph==0.4.8",
    "langchain-core>=0.3.66",
    "langchain-openai==0.2.3",
    "langchain-google-genai==2.1.6",
    "langchain==0.3.26",
    "langchain-anthropic==0.2.3",
    "openai>=1.52.1",
    "langchain-community>=0.3.1",
    "copilotkit>=0.1.52",
    "crewai==0.118.0",
    "uvicorn>=0.31.0",
    "python-dotenv>=1.0.1",
    "langgraph-cli[inmem]>=0.3.3",
]

[project.scripts]
demo = "email_agent.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["email_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
