[project]
name = "greeting_agent"
version = "0.1.0"
description = "Starter"
authors = [
    {name = "Ariel Weinberger", email = "weinberger.ariel@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain-openai==0.3.4",
    "langchain-community>=0.3.1",
    "langchain-anthropic==0.2.3",
    "langchain-google-genai==2.1.6",
    "langchain-core>=0.3.25",
    "langchain==0.3.26",
    "openai>=1.61.1",
    "copilotkit==0.1.55",
    "uvicorn>=0.31.0",
    "python-dotenv>=1.0.1",
    "crewai==0.102.0",
    "langgraph-cli[inmem]>=0.3.3",
    "langgraph==0.4.8",
]

[project.scripts]
demo = "greeting_agent.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["greeting_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
