[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "CopilotKit"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "copilotkit==0.1.49",
    "langchain==0.3.21",
    "langchain-openai>=0.2.13",
    "langchain-anthropic",
    "langgraph>=0.3.25",
    "langsmith==0.3.18",
    "openai>=1.68.2",
    "fastapi>=0.115.5",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
]

[project.scripts]
demo = "email_agent.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["email_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
