[project]
name = "translate_agent"
version = "0.1.0"
description = "Starter"
authors = [
    {name = "Ariel Weinberger", email = "weinberger.ariel@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain-openai>=0.2.1",
    "langchain-anthropic>=0.2.1",
    "langchain>=0.3.1",
    "openai>=1.51.0",
    "langchain-community>=0.3.1",
    "copilotkit==0.1.55",
    "uvicorn>=0.31.0",
    "python-dotenv>=1.0.1",
    "langchain-core>=0.3.25",
    "langgraph==0.4.8",
    "langgraph-cli[inmem]>=0.1.64",
]

[project.scripts]
demo = "translate_agent.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["translate_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
